--- a/.gitignore
+++ b/.gitignore
@@ -40,18 +40,18 @@ platforms/DBCreation/DBCreation.log
 distributions/
 .gitignore_local
 
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode
+sources/config_algorithms.h
+gitversion_algorithms.h*
 
-### VisualStudioCode ###
+# Created by https://www.toptal.com/developers/gitignore/api/vscode
+# Edit at https://www.toptal.com/developers/gitignore?templates=vscode
+
+### vscode ###
 .vscode/*
-!.vscode/tasks.json
-!.vscode/launch.json
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 *.code-workspace
 
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-.ionide
-
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/vscode
