#6 Use new dynawo API without static compilation

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ nrt/output
 platforms/DBCreation/DBCreation.log
 distributions/
 .gitignore_local
+*.orig
 
 sources/config_algorithms.h
 gitversion_algorithms.h*
