--- a/sources/Launcher/CMakeLists.txt
+++ b/sources/Launcher/CMakeLists.txt
@@ -10,17 +10,17 @@
 # of simulation tools for power systems.
 
 set(DYN_ALGO_LAUNCHER_SOURCES
-    DYNComputeLoadVariationLauncher.cpp
-    DYNSystematicAnalysisLauncher.cpp
-    DYNMarginCalculationLauncher.cpp
-    DYNRobustnessAnalysisLauncher.cpp
+  DYNComputeLoadVariationLauncher.cpp
+  DYNSystematicAnalysisLauncher.cpp
+  DYNMarginCalculationLauncher.cpp
+  DYNRobustnessAnalysisLauncher.cpp
   )
 
 set(DYN_ALGO_LAUNCHER_HEADERS
-    DYNComputeLoadVariationLauncher.h
-    DYNSystematicAnalysisLauncher.h
-    DYNMarginCalculationLauncher.h
-    DYNRobustnessAnalysisLauncher.h
+  DYNComputeLoadVariationLauncher.h
+  DYNSystematicAnalysisLauncher.h
+  DYNMarginCalculationLauncher.h
+  DYNRobustnessAnalysisLauncher.h
   )
 
 add_library(dynawo_algorithms_Launcher ${LIBRARY_TYPE} ${DYN_ALGO_LAUNCHER_SOURCES})
@@ -29,20 +29,20 @@ install(FILES ${DYN_ALGO_LAUNCHER_HEADERS} DESTINATION ${includedir})
 
 target_include_directories(dynawo_algorithms_Launcher
   INTERFACE
-      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-      $<INSTALL_INTERFACE:${INCLUDEDIR_NAME}>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:${INCLUDEDIR_NAME}>
   )
 
 target_link_libraries(dynawo_algorithms_Launcher
-   dynawo_algorithms_API_MultipleJobs
-   dynawo_algorithms_API_AggregatedResults
-   Dynawo::dynawo_Common
-   Dynawo::dynawo_API_JOB
-   Dynawo::dynawo_ModelerCommon
-   Dynawo::dynawo_Simulation
-   Dynawo::dynawo_SimulationCommon
-   Boost::system
-   Boost::program_options
-   libZIP::libZIP
+  dynawo_algorithms_API_MultipleJobs
+  dynawo_algorithms_API_AggregatedResults
+  Dynawo::dynawo_Common
+  Dynawo::dynawo_API_JOB
+  Dynawo::dynawo_ModelerCommon
+  Dynawo::dynawo_Simulation
+  Dynawo::dynawo_SimulationCommon
+  Boost::system
+  Boost::program_options
+  libZIP::libZIP
   )
-install(TARGETS dynawo_algorithms_Launcher EXPORT dynawo-targets DESTINATION ${libdir})
+install(TARGETS dynawo_algorithms_Launcher EXPORT dynawo_algorithms-targets DESTINATION ${libdir})
