--- a/sources/API/multipleJobs/test/CMakeLists.txt
+++ b/sources/API/multipleJobs/test/CMakeLists.txt
@@ -12,20 +12,21 @@
 set(MODULE_NAME dynawo_algorithms_API_MultipleJobs_unittest)
 
 set(MODULE_SOURCES
-    TestMultipleJobs.cpp
-)
+  TestMultipleJobs.cpp
+  )
 
 add_executable(${MODULE_NAME} ${MODULE_SOURCES})
 
 target_include_directories(${MODULE_NAME}
-        PRIVATE
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../>
-        )
+  PRIVATE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../>
+  )
 
 target_link_libraries(${MODULE_NAME}
-        dynawo_algorithms_API_MultipleJobs
-        dynawo_algorithms_Common
-        dynawo_algorithms_Test)
+  dynawo_algorithms_API_MultipleJobs
+  dynawo_algorithms_Common
+  dynawo_algorithms_Test
+  )
 
 add_custom_target(${MODULE_NAME}-pre-tests
   COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/res ${CMAKE_CURRENT_BINARY_DIR}/res
@@ -37,7 +38,8 @@ add_custom_target(${MODULE_NAME}-tests
   DEPENDS
     ${MODULE_NAME}-pre-tests
     ${MODULE_NAME}
-  COMMENT "Running ${MODULE_NAME}...")
+  COMMENT "Running ${MODULE_NAME}..."
+  )
 
 if(BUILD_TESTS_COVERAGE)
   set(EXTRACT_PATTERNS "'*/sources/API/multipleJobs/DYN*'")
