--- a/sources/Common/CMakeLists.txt
+++ b/sources/Common/CMakeLists.txt
@@ -56,6 +56,8 @@ set(DYN_ALGO_COMMON_SOURCES
   
 set(DYN_ALGO_COMMON_HEADERS
   DYNResultCommon.h
+  DYNScenario.h
+  DYNScenarios.h
   DYNSimulationResult.h
   DYNLoadIncreaseResult.h
   ${INCLUDE_KEYS}
