#32 Add a launcher to dump the result of CS mode in a file

--- a/sources/Launcher/CMakeLists.txt
+++ b/sources/Launcher/CMakeLists.txt
@@ -11,6 +11,7 @@
 
 set(DYN_ALGO_LAUNCHER_SOURCES
   DYNComputeLoadVariationLauncher.cpp
+  DYNComputeSimulationLauncher.cpp
   DYNSystematicAnalysisLauncher.cpp
   DYNMarginCalculationLauncher.cpp
   DYNRobustnessAnalysisLauncher.cpp
