#0 Clone data interfaces

--- a/sources/Launcher/CMakeLists.txt
+++ b/sources/Launcher/CMakeLists.txt
@@ -14,6 +14,7 @@ set(DYN_ALGO_LAUNCHER_SOURCES
   DYNSystematicAnalysisLauncher.cpp
   DYNMarginCalculationLauncher.cpp
   DYNRobustnessAnalysisLauncher.cpp
+  DYNDataInterfaceContainer.cpp
   )
 
 set(DYN_ALGO_LAUNCHER_HEADERS
@@ -21,6 +22,7 @@ set(DYN_ALGO_LAUNCHER_HEADERS
   DYNSystematicAnalysisLauncher.h
   DYNMarginCalculationLauncher.h
   DYNRobustnessAnalysisLauncher.h
+  DYNDataInterfaceContainer.h
   )
 
 add_library(dynawo_algorithms_Launcher SHARED ${DYN_ALGO_LAUNCHER_SOURCES})
