#0 Add unit test for data interface container

--- a/sources/Launcher/test/CMakeLists.txt
+++ b/sources/Launcher/test/CMakeLists.txt
@@ -13,6 +13,7 @@ set(MODULE_NAME dynawo_algorithms_Launcher_unittest)
 
 set(MODULE_SOURCES
   TestRobustnessAnalysisLauncher.cpp
+  TestDataInterfaceContainer.cpp
   )
 
 add_executable(${MODULE_NAME} ${MODULE_SOURCES})
@@ -25,6 +26,8 @@ target_include_directories(${MODULE_NAME}
 target_link_libraries(${MODULE_NAME}
   dynawo_algorithms_Launcher
   dynawo_algorithms_Test
+
+  Dynawo::dynawo_DataInterfaceFactory
   )
 
 if(CXX11_ENABLED)
