#32 fix copyright and cmake

--- a/sources/Launcher/CMakeLists.txt
+++ b/sources/Launcher/CMakeLists.txt
@@ -19,6 +19,7 @@ set(DYN_ALGO_LAUNCHER_SOURCES
 
 set(DYN_ALGO_LAUNCHER_HEADERS
   DYNComputeLoadVariationLauncher.h
+  DYNComputeSimulationLauncher.h
   DYNSystematicAnalysisLauncher.h
   DYNMarginCalculationLauncher.h
   DYNRobustnessAnalysisLauncher.h
