#51 auto detect iidm library dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ if(CXX11_ENABLED)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -DLANG_CXX0X")
   else()
     message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Disabling C++11.")
+    set(CXX11_ENABLED OFF CACHE BOOL "" FORCE)
   endif()
 else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
@@ -181,7 +182,15 @@ find_package(XercesC 3.2.2 REQUIRED)
 find_package(libXML 0.2.4 REQUIRED)
 
 #libIIDM
-if(CXX11_ENABLED)
+if(NOT CXX11_ENABLED)
+  set(USE_LEGACY_IIDM YES)
+else()
+  file(STRINGS ${DYNAWO_HOME}/dynawoEnv.txt DYNAWO_ENV REGEX "^[ ]*DYNAWO_USE_LEGACY_IIDM[ ]*=")
+  string(REGEX REPLACE "^[ ]*DYNAWO_USE_LEGACY_IIDM[ ]*=[ ]*\"([^\"]*)\"" "\\1" USE_LEGACY_IIDM ${DYNAWO_ENV})
+  unset(DYNAWO_ENV)
+endif()
+
+if(NOT USE_LEGACY_IIDM)
   find_package(LibXml2 "2.9" REQUIRED)
   find_package(LibIIDM "1.4.0" REQUIRED)
 else()
