#48 Take remarks into account

--- a/sources/Launcher/CMakeLists.txt
+++ b/sources/Launcher/CMakeLists.txt
@@ -16,7 +16,7 @@ set(DYN_ALGO_LAUNCHER_SOURCES
   DYNMarginCalculationLauncher.cpp
   DYNRobustnessAnalysisLauncher.cpp
   DYNDataInterfaceContainer.cpp
-  DYNAnalysisContext.cpp
+  DYNMultiVariantInputs.cpp
   )
 
 set(DYN_ALGO_LAUNCHER_HEADERS
@@ -26,7 +26,7 @@ set(DYN_ALGO_LAUNCHER_HEADERS
   DYNMarginCalculationLauncher.h
   DYNRobustnessAnalysisLauncher.h
   DYNDataInterfaceContainer.h
-  DYNAnalysisContext.h
+  DYNMultiVariantInputs.h
   )
 
 add_library(dynawo_algorithms_Launcher SHARED ${DYN_ALGO_LAUNCHER_SOURCES})
