#48 Minimize reading of IIDM files
When a IIDM file is read multiple times, read it only once, especially during
the multithreading run

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ platforms/DBCreation/DBCreation.log
 distributions/
 .gitignore_local
 *.orig
+deploy/*
 
 sources/config_algorithms.h
 gitversion_algorithms.h*
