#74 Fix conflict between local and deploy boost

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ gitversion_algorithms.h*
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode
+
+myEnvDynawoAlgorithms.sh
